--- a/front-end/app/index.html
+++ b/front-end/app/index.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/bs/css/bootstrap.css">
+  <script src="css/bs/js/jquery.min.js"></script>
+  <script src="css/bs/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/css/w3.css">
+  <link rel="stylesheet" href="/css/theme.css">
   <link rel="stylesheet" href="/css/my.css">
 
 </head>
